--- a/index.html
+++ b/index.html
@@ -267,22 +267,22 @@
                     <form class="formcontato__form" name="form">
                         <label class="formcontato__input" for="">
                             <p class="input__title">Nombre</p>
-                            <input type="text" name="nombre">
+                            <input type="text" name="nombre" autocomplete="off" required >
                         </label>
 
                         <label class="formcontato__input">
                             <p class="input__title">E-mail</p>
-                            <input type="email" name="email">
+                            <input type="email" name="email" autocomplete="off" required>
                         </label>
 
                         <label class="formcontato__input">
                             <p class="input__title">Assunto</p>
-                            <input type="text" name="asunto">
+                            <input type="text" name="asunto" autocomplete="off" required>
                         </label>
 
                         <label class="formcontato__input">
                             <p class="input__title">Mensaje</p>
-                            <textarea rows="5" cols="40" id="mensagem" name="mensaje" ></textarea>
+                            <textarea rows="5" cols="40" id="mensagem" name="mensaje" required></textarea>
                         </label>
 
                         <button type="submit" class="formcontato__botao">Enviar mensaje</button>
